<resources>
    <string name="app_name">我的世界合成表大全</string>
    <string name="versionCode">v9.4 Alpha</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_search">搜索</string>
    <string name="menu_change_theme">切换主题</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_share">分享</string>
    <string name="menu_about">关于</string>
    <string name="toolbar_title">我的世界合成表大全</string>
    <string name="category_others">其他</string>
    <string name="category_weapon">武器</string>
    <string name="category_tools">工具</string>
    <string name="category_tannsport">运输</string>
    <string name="category_redstone">红石</string>
    <string name="category_ore">矿石</string>
    <string name="category_lighting">照明</string>
    <string name="category_food">食物</string>
    <string name="category_dye">染料</string>
    <string name="category_decoration">装饰</string>
    <string name="category_daily">日常</string>
    <string name="category_building">建筑</string>
    <string name="category_brewing">药水</string>
    <string name="category_enchant">附魔</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="click_to_change_theme">更换标题栏颜色</string>
    <string name="autocomplete_hint">输入文字进行搜索</string>
    <string name="category_smelting">烧炼</string>
    <string name="tip_me">打赏作者</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="category_boss">BOSS</string>
    <string name="category_hostile">攻击型</string>
    <string name="category_neutral">中立型</string>
    <string name="category_passive">被动型</string>
    <string name="category_tameable">可驯服</string>
    <string name="category_utility">效用型</string>
    <string name="category_other_mobs">其他生物</string>
    <string name="category_natural">自然生成</string>
    <string name="category_sructures">结构方块</string>
    <string name="category_materials">材料类</string>
    <string name="category_food2">食物类</string>
    <string name="category_plants">植物类</string>
    <string name="category_command">命令方块</string>
    <string name="category_other_block">其他物品</string>
    <string name="title_activity_tutorial">ActivityTutorial</string>
    <string name="tip_the_end">已经到底了!</string>

    <!--admob-->
    <string name="admob_uni_id">ca-app-pub-1353370194949670~3914579262</string>
    <string name="ad_banner_id">ca-app-pub-1353370194949670/1876052366</string>
    <string name="ad_native_id">ca-app-pub-1353370194949670/3859179886</string>
    <string name="my_test_device_id">C5EF7D96DFF2F2C3E5CD1CA16D57D71F</string>

    <!--color-->
    <string name="color_black">黑色</string>
    <string name="color_gray">灰色</string>
    <string name="color_pink">粉色</string>
    <string name="color_red">深红</string>
    <string name="feedback">意见反馈</string>
    <string name="color_orange">橙色</string>
    <string name="color_purple">紫色</string>
    <string name="color_blue">浅蓝</string>
    <string name="color_brown">棕色</string>
    <string name="color_orange_red">红色</string>
    <string name="color_blue_purple">紫蓝</string>
    <string name="color_deep_blue">蓝色</string>
    <string name="color_drak_green">深绿</string>
    <string name="color_green">绿色</string>
    <string name="color_gold">金色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_saddle_brown">褐色</string>
    <string name="color_hotpink">粉红</string>

    <string name="change_item_title_color">改变物品名称背景颜色</string>
    <string name="change_main_title_color">改变主标题栏背景颜色</string>
    <string name="check_vip">去广告</string>
    <string name="user_name_tip">点击设置名字</string>
    <string name="click_hint_setting_username">点击输入</string>
    <string name="tip_you_are_vip_now">广告已经没有啦</string>
    <string name="tip_you_are_not_a_vip">亲, 没查询到你的状态</string>
    <string name="tip_check_vip_error">查询的时候出错了</string>
    <string name="tip_dashang1">为人民服务也要吃饭\n打赏后请联系作者</string>
    <string name="tip_dashang2">打赏后请把留言和昵称发给作者</string>
    <string name="tip_email">cuisanzhang@163.com</string>
    <string name="tip_qq">QQ: 1135899918</string>
    <string name="tip_no_network">没有网络啊, 我查不到</string>
    <string name="tip_back_door">苦逼的作者</string>
    <string name="color_sky_blue">深蓝</string>
    <string name="color_deepdrak">深黑</string>
    <string name="btn_new_play">新手</string>
    <string name="btn_huangjingjieshao">环境</string>
    <string name="btn_jinjiezhinan">进阶</string>
    <string name="btn_building">建筑</string>
    <string name="btn_zhongzhi">种植</string>
    <string name="btn_shuaguai">刷怪</string>
    <string name="btn_caikuaijishu">采矿</string>
    <string name="btn_fumoshaolian">附魔烧炼</string>
    <string name="btn_chujihongshi">初级红石</string>
    <string name="btn_hongshijinjie">红石进阶</string>
    <string name="btn_gaojijishu">高级技术</string>
    <string name="btn_gengduotiaozhan">挑战</string>
    <string name="btn_mc163">网易教程</string>
    <string name="btn_wangluojiaocheng">网络教程</string>
    <string name="changelangeuage">切换语言</string>
    <string name="zhifubao">支付宝</string>
    <string name="weixin">微信</string>
    <string name="jianzhuleihecheng">建筑类合成</string>
    <string name="zhuangshileihecheng">装饰类合成</string>
    <string name="rangliaoleihecheng">染料类合成</string>
    <string name="shiwuleihecheng">食物类合成</string>
    <string name="zhaomingleihecheng">照明类合成</string>
    <string name="kuangshileihecheng">矿石类合成</string>
    <string name="redstonehezhuanzhileihechen">红石和装置类合成</string>
    <string name="yunshuleihecheng">运输类合成</string>
    <string name="gongjuleihecheng">工具类合成</string>
    <string name="wuqileihecheng">武器类合成</string>
    <string name="qitaleihecheng">其他类合成</string>
    <string name="shaolianlei">烧炼类</string>
    <string name="yaoshuilei">药水类</string>
    <string name="fumolei">附魔类</string>
    <string name="wiki_turorial">wiki.教程</string>
    <string name="hechengbiaodaquan">合成表大全</string>
    <string name="shengwu_wuping_fangkuai">生物.物品.方块</string>
    <string name="boss">BOSS</string>
    <string name="gongjixingshengwu">攻击型生物</string>
    <string name="zhonglixingshengwu">中立型生物</string>
    <string name="beidongxingshengwu">被动型生物</string>
    <string name="kexunfushengwu">可驯服生物</string>
    <string name="xiaoyongxingshengwu">效用型生物</string>
    <string name="qitashengwu">其他的生物</string>
    <string name="shiwuleiwuping">食物类物品</string>
    <string name="zhiwuleiwuping">植物类物品</string>
    <string name="cailiaoleiwuping">材料类物品</string>
    <string name="zhirangshengchengfankuai">自然生成方块</string>
    <string name="jiegoufangkuai">结构方块</string>
    <string name="minglingleifankuai">命令类方块</string>
    <string name="qitawuping">其他物品</string>
    <string name="xingshouzhinan">新手指南</string>
    <string name="huangjinjieshao">环境介绍</string>
    <string name="jingjiezhinan">进阶指南</string>
    <string name="jianzhujiaocheng">建筑教程</string>
    <string name="zhongzhijiaocheng">种植教程</string>
    <string name="shuaguaijiaocheng">刷怪教程</string>
    <string name="caikuanjishu">采矿技术</string>
    <string name="fumoshaoliao">附魔烧炼</string>
    <string name="chujichongshi">初级红石</string>
    <string name="hongshigaoji">红石高级</string>
    <string name="gaojijishu">高级技术</string>
    <string name="gengduotiaozhang">更多挑战</string>
    <string name="wangyijiaocheng">网易教程</string>
    <string name="wangluojiaocheng">网络教程</string>
    <string name="about_tutorial">关于教程图片</string>
    <string name="aout_turorial_message">教程是离线的\n但是图片是在线的\n请注意流量\n所有的教程图片超过了500M</string>
    <string name="queding">确定</string>
    <string name="xiaotishi">小提示</string>
    <string name="xiaotishi_message">点击图片可以查看材料来源\n图片都是离线的,不需要联网</string>
    <string name="append_search">的搜索结果</string>
    <string name="about_mincreafting">关于 Mincreafting</string>
    <string name="about_mincreafting_message">这是一个Minecraft合成表的APP\n所有内容来自于\nMinecraft中文WIKI\n网易\n网络以及网友的贡献</string>
    <string name="enter_name">我的昵称</string>
    <string name="quxiao">取消</string>
    <string name="please_wait">请稍等</string>
    <string name="init_datebase">正在初始化数据库</string>
    <string name="init_datebaseing">正在初始化数据库\n</string>
    <string name="unknow_error">出现未知错误</string>
    <string name="nothing">暂无数据</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="traditional_chinese">繁體中文</string>
    <string name="changelanguage">切换语言</string>
    <string name="changelanguage_message">语言设置影响搜索结果</string>
    <string name="areyousure">嗯! 一定是你点错了,请先去广告</string>
    <string name="color_deep_gray">深灰</string>
    <string name="color_light_gray">亮灰</string>
    <string name="settingcache">缓存设置</string>
    <string name="switchcache_messageTextView">教程图片离线缓存</string>
    <string name="switchcache_messagetesting">功能测试中</string>

</resources>
