<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
         <item
            android:id="@+id/menu_changeTheme"
            android:icon="@drawable/ic_change_theme"
            android:title="@string/menu_change_theme" />
        <item
            android:id="@+id/menu_changelanguage"
            android:icon="@drawable/ic_language"
            android:title="@string/changelangeuage" />

        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/menu_tip"
            android:icon="@drawable/ic_tip"
            android:title="@string/tip_me" />

         <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_android"
            android:title="@string/menu_about" />


    </group>
</menu>