<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efefefef"
    tools:context="com.cuisanzhang.mincreafting.FragmentMainActivity">




    <LinearLayout
        android:id="@+id/layout_btn_boss"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:clickable="true"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:clickable="false"

            android:padding="5dp"
            android:src="@drawable/icon_moyinglong" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="false"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/category_boss"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>



    <LinearLayout
            android:id="@+id/layout_btn_hostile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:padding="5dp"
                android:src="@drawable/icon_zombie" />

            <TextView
                android:id="@+id/textViewBuilding"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/category_hostile"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/layout_btn_neutral"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:padding="5dp"
                android:src="@drawable/icon_moyingren" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/category_neutral"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/layout_btn_passive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:padding="5dp"
                android:src="@drawable/icon_pig" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/category_passive"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/layout_btn_tameable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewTools"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:padding="5dp"
                android:src="@drawable/icon_ma" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/category_tameable"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn_utility"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:clickable="true"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewBrewing"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:padding="5dp"
            android:src="@drawable/icon_nowgolem" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="false"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/category_utility"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_other_mobs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:padding="5dp"
                android:src="@drawable/icon_jiaoyubang" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/category_other_mobs"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>








</LinearLayout>
